Expand Configuration menu by default to make Application Settings more visible

--- a/templates/index.html
+++ b/templates/index.html
@@ -1446,7 +1446,7 @@
                             </div>
                         </li>
                         <!-- Configuration Menu with Submenu -->
-                        <li class="nav-item mb-2 nav-item-parent" id="configNavParent">
+                        <li class="nav-item mb-2 nav-item-parent expanded" id="configNavParent">
                             <a class="nav-link text-white nav-link-parent" href="#" onclick="toggleConfigMenu(); return false;">
                                 <div class="d-flex align-items-center">
                                     <i class="fas fa-cog me-2"></i>
